<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2017 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<org.chromium.components.browser_ui.widget.MaterialCardViewNoShadow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signin_promo_view_wrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    style="@style/MaterialCardStyle">

    <org.chromium.chrome.browser.signin.ui.PersonalizedSigninPromoView
        android:id="@+id/signin_promo_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="12dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp">

            <include layout="@layout/personalized_signin_promo_view_header"/>
        </FrameLayout>

        <include layout="@layout/personalized_signin_promo_view_body"/>

    </org.chromium.chrome.browser.signin.ui.PersonalizedSigninPromoView>
</org.chromium.components.browser_ui.widget.MaterialCardViewNoShadow>
