// Copyright 2026 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

package org.chromium.chrome.browser.ntp;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.assertion.ViewAssertions.doesNotExist;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isEnabled;
import static androidx.test.espresso.matcher.ViewMatchers.withEffectiveVisibility;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;

import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.not;
import static org.junit.Assert.assertEquals;
import static org.junit.Assert.assertNotNull;
import static org.junit.Assert.assertNull;

import static org.chromium.base.test.transit.ViewFinder.waitForNoView;
import static org.chromium.chrome.browser.url_constants.UrlConstantResolver.getOriginalNativeNtpUrl;
import static org.chromium.ui.test.util.ViewUtils.waitForVisibleView;

import android.text.format.DateUtils;
import android.widget.TextView;

import androidx.test.espresso.matcher.ViewMatchers.Visibility;
import androidx.test.filters.MediumTest;

import org.hamcrest.Matchers;
import org.junit.After;
import org.junit.Assert;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.rules.RuleChain;
import org.junit.runner.RunWith;
import org.mockito.Mock;
import org.mockito.Mockito;
import org.mockito.junit.MockitoJUnit;
import org.mockito.junit.MockitoRule;

import org.chromium.base.FakeTimeTestRule;
import org.chromium.base.FeatureOverrides;
import org.chromium.base.ThreadUtils;
import org.chromium.base.test.params.ParameterAnnotations;
import org.chromium.base.test.params.ParameterSet;
import org.chromium.base.test.params.ParameterizedRunner;
import org.chromium.base.test.util.Batch;
import org.chromium.base.test.util.Criteria;
import org.chromium.base.test.util.CriteriaHelper;
import org.chromium.base.test.util.DisableIf;
import org.chromium.base.test.util.Feature;
import org.chromium.base.test.util.Features.DisableFeatures;
import org.chromium.base.test.util.Restriction;
import org.chromium.chrome.R;
import org.chromium.chrome.browser.ChromeTabbedActivity;
import org.chromium.chrome.browser.educational_tip.EducationalTipModuleUtils;
import org.chromium.chrome.browser.flags.ChromeFeatureList;
import org.chromium.chrome.browser.preferences.ChromePreferenceKeys;
import org.chromium.chrome.browser.preferences.ChromeSharedPreferences;
import org.chromium.chrome.browser.setup_list.SetupListManager;
import org.chromium.chrome.browser.signin.services.SigninPreferencesManager;
import org.chromium.chrome.browser.tab.Tab;
import org.chromium.chrome.browser.ui.messages.snackbar.Snackbar;
import org.chromium.chrome.browser.ui.messages.snackbar.SnackbarManager;
import org.chromium.chrome.browser.ui.signin.signin_promo.NtpSigninPromoDelegate;
import org.chromium.chrome.test.ChromeJUnit4RunnerDelegate;
import org.chromium.chrome.test.transit.ChromeTransitTestRules;
import org.chromium.chrome.test.transit.FreshCtaTransitTestRule;
import org.chromium.chrome.test.util.NewTabPageTestUtils;
import org.chromium.chrome.test.util.browser.signin.SigninTestRule;
import org.chromium.components.externalauth.ExternalAuthUtils;
import org.chromium.components.signin.SigninFeatures;
import org.chromium.components.signin.base.AccountInfo;
import org.chromium.components.signin.test.util.FakeAccountManagerFacade;
import org.chromium.components.signin.test.util.TestAccounts;
import org.chromium.ui.base.DeviceFormFactor;

import java.util.Arrays;
import java.util.List;

/**
 * Integration tests for {@link SigninPromoCoordinator} launched from {@link NewTabPage} entry
 * point.
 *
 * <p>TODO(crbug.com/493130564): Revert to regular runner after
 * MAKE_IDENTITY_MANAGER_SOURCE_OF_ACCOUNTS launch.
 */
@Batch(Batch.PER_CLASS)
@RunWith(ParameterizedRunner.class)
@ParameterAnnotations.UseRunnerDelegate(ChromeJUnit4RunnerDelegate.class)
// TODO(b/555414915): Update Android tests with WebUI NTP enabled on AL.
@DisableFeatures(ChromeFeatureList.USE_WEB_UI_NTP_ANDROID)
public class NewTabPageSigninPromoTest {
    @ParameterAnnotations.ClassParameter
    public static final List<ParameterSet> sClassParams =
            Arrays.asList(
                    new ParameterSet().value(true).name("IdentityManagerMigrationEnabled"),
                    new ParameterSet().value(false).name("IdentityManagerMigrationDisabled"));

    private boolean mIsActivityStarted;

    public NewTabPageSigninPromoTest(boolean isIdentityManagerMigrationEnabled) {
        FeatureOverrides.overrideFlag(
                SigninFeatures.MAKE_IDENTITY_MANAGER_SOURCE_OF_ACCOUNTS,
                isIdentityManagerMigrationEnabled);
    }

    private final FreshCtaTransitTestRule mActivityTestRule =
            ChromeTransitTestRules.freshChromeTabbedActivityRule();
    private final SigninTestRule mSigninTestRule = SigninTestRule.createWithCleanups();

    @Rule
    public final RuleChain mRuleChain =
            RuleChain.outerRule(mSigninTestRule).around(mActivityTestRule);

    @Rule public final MockitoRule mMockitoRule = MockitoJUnit.rule();

    @Rule public FakeTimeTestRule mFakeTimeTestRule = new FakeTimeTestRule();

    @Mock private SetupListManager mSetupListManager;
    @Mock private ExternalAuthUtils mExternalAuthUtilsMock;

    @Before
    public void setUp() {
        Mockito.when(mSetupListManager.isSetupListActive()).thenReturn(false);
        SetupListManager.setInstanceForTesting(mSetupListManager);
        EducationalTipModuleUtils.setEducationalTipActiveForTesting(false);

        ExternalAuthUtils.setInstanceForTesting(mExternalAuthUtilsMock);
        Mockito.lenient().when(mExternalAuthUtilsMock.canUseGooglePlayServices()).thenReturn(true);
        Mockito.lenient()
                .when(mExternalAuthUtilsMock.isGooglePlayServicesMissing(Mockito.any()))
                .thenReturn(false);
    }

    @After
    public void tearDown() {
        ChromeSharedPreferences.getInstance()
                .removeKey(ChromePreferenceKeys.SIGNIN_PROMO_NTP_PROMO_DISMISSED);
        ChromeSharedPreferences.getInstance()
                .removeKey(
                        ChromePreferenceKeys.SYNC_PROMO_SHOW_COUNT.createKey(
                                SigninPreferencesManager.SigninPromoAccessPointId.NTP));
        ChromeSharedPreferences.getInstance()
                .removeKey(ChromePreferenceKeys.SYNC_PROMO_TOTAL_SHOW_COUNT);
        ChromeSharedPreferences.getInstance()
                .removeKey(ChromePreferenceKeys.SIGNIN_PROMO_NTP_FIRST_SHOWN_TIME);
        ChromeSharedPreferences.getInstance()
                .removeKey(ChromePreferenceKeys.SIGNIN_PROMO_NTP_LAST_SHOWN_TIME);
    }

    private void openNewTabPage() {
        if (!mIsActivityStarted) {
            mActivityTestRule.startOnBlankPage();
            mIsActivityStarted = true;
        }
        mActivityTestRule.loadUrlInNewTab(getOriginalNativeNtpUrl());
        Tab tab = mActivityTestRule.getActivityTab();
        NewTabPageTestUtils.waitForNtpLoaded(tab);

        Assert.assertTrue(tab.getNativePage() instanceof NewTabPage);
    }

    @Test
    @MediumTest
    @Feature({"FeedNewTabPage"})
    public void testSignInPromo_AccountsNotReady() {
        try (var _ = mSigninTestRule.blockGetAccountsUpdate()) {
            openNewTabPage();
            // Check that the sign-in promo is not shown if accounts are not ready.
            onView(withId(R.id.signin_promo_view_container)).check(doesNotExist());
        }
    }

    @Test
    @MediumTest
    @Feature({"FeedNewTabPage"})
    // Restrict to Phones and Tablets because Desktop Android does not show feed in NTP.
    @Restriction({DeviceFormFactor.PHONE_OR_TABLET})
    public void testSignInPromo_AccountsReady() {
        openNewTabPage();
        // Check that the sign-in promo is displayed this time.
        verifySigninPromoShown();
    }

    @Test
    @MediumTest
    @Feature({"FeedNewTabPage"})
    // Restrict to Phones and Tablets because Desktop Android does not show feed in NTP.
    @Restriction({DeviceFormFactor.PHONE_OR_TABLET})
    public void testSignInPromo_NotShownAfterSignIn() {
        openNewTabPage();
        verifySigninPromoShown();

        mSigninTestRule.addAccountThenSignin(TestAccounts.ACCOUNT1);

        onView(withId(R.id.signin_promo_view_container))
                .check(matches(withEffectiveVisibility(Visibility.GONE)));
    }

    @Test
    @MediumTest
    @Feature({"FeedNewTabPage"})
    // Restrict to Phones and Tablets because Desktop Android does not show feed in NTP.
    @Restriction({DeviceFormFactor.PHONE_OR_TABLET})
    public void testSignInPromoDisplayedWithDefaultUser() {
        mSigninTestRule.addAccount(TestAccounts.ACCOUNT1);

        openNewTabPage();

        verifySigninPromoShown();
    }

    @Test
    @MediumTest
    @Feature({"FeedNewTabPage"})
    // Restrict to Phones and Tablets because Desktop Android does not show feed in NTP.
    @Restriction({DeviceFormFactor.PHONE_OR_TABLET})
    public void testSignInPromoDisplayedWithAADCMinorAccount() {
        mSigninTestRule.addAccount(TestAccounts.AADC_MINOR_ACCOUNT);

        openNewTabPage();

        verifySigninPromoShown();
    }

    @Test
    @MediumTest
    @Feature({"FeedNewTabPage"})
    // TODO(crbug.com/483105856): Test is flaky on desktop bots.
    @DisableIf.Device(DeviceFormFactor.DESKTOP)
    public void testSigninPromoLoadingState() {
        openNewTabPage();
        // An account with an unknown hosted domain emulates a long sign-in. This way the loading
        // state will be shown for a longer time.
        AccountInfo accountHostedDomainUnknown =
                new AccountInfo.Builder(
                                "test@example.com",
                                FakeAccountManagerFacade.toGaiaId("test@example.com"))
                        .build();
        mSigninTestRule.addAccount(accountHostedDomainUnknown);
        verifySigninPromoShown();
        assertNull(mSigninTestRule.getPrimaryAccount());

        onView(withId(R.id.signin_promo_primary_button)).perform(scrollTo());
        waitForVisibleView(withId(R.id.signin_promo_primary_button));

        // Before click: primary button, secondary CTA, and dismiss button are enabled.
        onView(withId(R.id.signin_promo_primary_button))
                .check(
                        matches(
                                allOf(
                                        isDisplayed(),
                                        isEnabled(),
                                        withText(R.string.sync_promo_continue))));
        onView(withId(R.id.account_picker_selected_account))
                .check(matches(allOf(isDisplayed(), isEnabled())));
        onView(withId(R.id.signin_promo_dismiss_button))
                .check(matches(allOf(isDisplayed(), isEnabled())));

        onView(withId(R.id.signin_promo_primary_button)).perform(click());
        onView(withId(R.id.signin_promo_primary_button))
                .check(
                        matches(
                                allOf(
                                        isDisplayed(),
                                        not(isEnabled()),
                                        withText(
                                                R.string
                                                        .signin_account_picker_bottom_sheet_signin_title))));
        onView(withId(R.id.account_picker_selected_account)).check(matches(not(isEnabled())));
        onView(withId(R.id.signin_promo_dismiss_button))
                .check(
                        matches(
                                allOf(
                                        not(isEnabled()),
                                        withEffectiveVisibility(Visibility.INVISIBLE))));
    }

    @Test
    @MediumTest
    @Feature({"FeedNewTabPage"})
    // TODO(crbug.com/483438567): Test is flaky on desktop bots.
    @DisableIf.Device(DeviceFormFactor.DESKTOP)
    public void testSeamlessSigninFlow_WithFinalSnackbarUndoSignin() {
        mSigninTestRule.addAccount(TestAccounts.AADC_ADULT_ACCOUNT);
        openNewTabPage();
        // Check that the sign-in promo is displayed for a signed-out user.
        verifySigninPromoShown();
        assertNull(mSigninTestRule.getPrimaryAccount());
        // Click the sign-in button.
        // For landscape mode tests, scroll to ensure button is visible.
        onView(withId(R.id.signin_promo_primary_button)).perform(scrollTo());
        waitForVisibleView(withId(R.id.signin_promo_primary_button));
        onView(withId(R.id.signin_promo_primary_button)).perform(click());
        // Handle Automotive Device Lock (for Automotive Tests).
        mSigninTestRule.completeDeviceLockIfOnAutomotive();
        // Wait for promo to disappear.
        waitForNoView(withId(R.id.signin_promo_view_container));
        // Once the sign-in promo disappears, the sign-in flow is complete.
        assertNotNull(mSigninTestRule.getPrimaryAccount());

        // Click "Undo" button in the snackbar. This should sign the user out and permanently
        // dismiss the promo.
        verifySigninSnackbarShown();
        clickSigninSnackbarActionButton();
        verifySignoutSnackbarShown();

        assertNull(mSigninTestRule.getPrimaryAccount());
        onView(withId(R.id.signin_promo_view_container))
                .check(matches(withEffectiveVisibility(Visibility.GONE)));
    }

    private void verifySigninSnackbarShown() {
        ChromeTabbedActivity activity = mActivityTestRule.getActivity();
        CriteriaHelper.pollUiThread(
                () -> {
                    String email = TestAccounts.AADC_ADULT_ACCOUNT.getEmail();
                    String expectedSnackbarSigninMessage =
                            activity.getString(R.string.snackbar_signed_in_as, email);
                    SnackbarManager snackbarManager = activity.getSnackbarManager();
                    Criteria.checkThat(snackbarManager.isShowing(), Matchers.is(true));
                    TextView snackbarMessage = activity.findViewById(R.id.snackbar_message);
                    Snackbar snackbar = snackbarManager.getCurrentSnackbarForTesting();

                    Criteria.checkThat(
                            snackbar.getIdentifierForTesting(), Matchers.is(Snackbar.UMA_SIGN_IN));
                    Criteria.checkThat(snackbarMessage, Matchers.notNullValue());
                    Criteria.checkThat(
                            snackbarMessage.getText().toString(),
                            Matchers.is(expectedSnackbarSigninMessage));
                    Criteria.checkThat(snackbar.getController(), Matchers.notNullValue());
                });
    }

    private void clickSigninSnackbarActionButton() {
        ChromeTabbedActivity activity = mActivityTestRule.getActivity();
        ThreadUtils.runOnUiThreadBlocking(
                () -> {
                    Snackbar snackbar =
                            activity.getSnackbarManager().getCurrentSnackbarForTesting();
                    assertEquals(
                            "Expecting to click on the sign-in snackbar",
                            Snackbar.UMA_SIGN_IN,
                            snackbar.getIdentifierForTesting());
                    snackbar.getController().onAction(snackbar.getActionData());
                });
    }

    @Test
    @MediumTest
    @Feature({"FeedNewTabPage"})
    // Restrict to Phones and Tablets because Desktop Android does not show feed in NTP.
    @Restriction({DeviceFormFactor.PHONE_OR_TABLET})
    public void testSignInPromo_shownIfTimeElapsedSinceFirstShownIsLessThanFirstShownLimit() {
        // Show the promo for the first time.
        openNewTabPage();
        verifySigninPromoShown();

        // Advance time, but not beyond the first time shown limit.
        mFakeTimeTestRule.advanceMillis(
                (NtpSigninPromoDelegate.NTP_SYNC_PROMO_NTP_SINCE_FIRST_TIME_SHOWN_LIMIT_HOURS - 1)
                        * DateUtils.HOUR_IN_MILLIS);

        // Open a new tab, the promo should still be shown.
        openNewTabPage();
        verifySigninPromoShown();
    }

    @Test
    @MediumTest
    @Feature({"FeedNewTabPage"})
    // Restrict to Phones and Tablets because Desktop Android does not show feed in NTP.
    @Restriction({DeviceFormFactor.PHONE_OR_TABLET})
    public void
            testSignInPromo_hiddenIfTimeElapsedSinceFirstShownExceedsFirstShownLimitButNotResetThreshold() {
        // Show the promo for the first time.
        openNewTabPage();
        verifySigninPromoShown();

        // Advance time beyond the first time shown limit, but not beyond the last time shown reset
        // period.
        mFakeTimeTestRule.advanceMillis(
                (NtpSigninPromoDelegate.NTP_SYNC_PROMO_RESET_AFTER_DAYS - 1)
                        * DateUtils.DAY_IN_MILLIS);

        // Open a new tab, the promo should not be shown.
        openNewTabPage();
        onView(withId(R.id.signin_promo_view_container)).check(doesNotExist());
    }

    @Test
    @MediumTest
    @Feature({"FeedNewTabPage"})
    // Restrict to Phones and Tablets because Desktop Android does not show feed in NTP.
    @Restriction({DeviceFormFactor.PHONE_OR_TABLET})
    public void
            testSignInPromo_shownIfTimeElapsedSinceFirstShownExceedsFirstShownLimitAndResetThreshold() {
        // Show the promo for the first time.
        openNewTabPage();
        verifySigninPromoShown();

        // Advance time beyond the the first time shown limit and the last time shown reset period.
        mFakeTimeTestRule.advanceMillis(
                (NtpSigninPromoDelegate.NTP_SYNC_PROMO_RESET_AFTER_DAYS * DateUtils.DAY_IN_MILLIS));
        // Open a new tab, the promo should be shown.
        openNewTabPage();
        verifySigninPromoShown();
    }

    private void verifySigninPromoShown() {
        // The use of `scrollTo` helps fixing flakiness on desktop bots.
        onView(withId(R.id.signin_promo_view_container))
                .perform(scrollTo())
                .check(matches(isDisplayed()));
    }

    private void verifySignoutSnackbarShown() {
        ChromeTabbedActivity activity = mActivityTestRule.getActivity();
        CriteriaHelper.pollUiThread(
                () -> {
                    SnackbarManager snackbarManager = activity.getSnackbarManager();
                    Criteria.checkThat(snackbarManager.isShowing(), Matchers.is(true));
                    Snackbar snackbar = snackbarManager.getCurrentSnackbarForTesting();
                    Criteria.checkThat(
                            snackbar.getIdentifierForTesting(), Matchers.is(Snackbar.UMA_SIGN_OUT));
                });
    }
}
